--- a/components_old.html
+++ b/components_old.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BON - Component一覧</title>
-    <link rel="stylesheet" href="../dist/css/main.min.css">
+    <link rel="stylesheet" href="./dist/css/main.min.css">
 </head>
 <body class="body-wrapper">
   <header class="header">
-    <h1 class="header__site-logo">
-      <a href="#"><img src="../dist/images/common/site-logo.png"></a>
-    </h1>
+    <h1 class="header__site-logo"><a href="#"><img src="./dist/images/common/site-logo.png"></a></h1>
     <!-- menu / start -->
     <div class="drawer">
     	<input class="drawer__checkbox" id="drawerCheckbox" type="checkbox" >
@@ -27,15 +25,11 @@
     	</nav>
     </div>
     <!-- menu / end -->
-    <div class="header__shopping-bag">
-      <a href="#">
-        <img src="../dist/images/common/icn_shopping-bag.svg">
-      </a>
-    </div>
+    <div class="header__shopping-bag"><a href="#"><img src="./dist/images/common/icn_shopping-bag.svg"></a></div>
   </header>
   <!-- article / start -->
-  <div class="contents">
-    <article class="contents__article-wrapper flex">
+  <div class="contents-wrapper">
+    <article class="flex contents">
       <!-- index-title / start -->
       <div class="index-title offset-3 col-8">
         <h1 class="index-title__heading">盆栽と人</h1>
@@ -355,7 +349,7 @@
         </div>
       </div>
     </article>
-    <aside class="flex aside">
+    <aside class="flex contents">
       <div class="aside__area-wrapper">
       <!-- text-list-link-box / end -->
       <div class="row">
@@ -598,9 +592,7 @@
       </div>
       <!-- contents-link-box / end -->
     </aside>
-    <div class="breadcrumbs">
-      <p class="breadcrumbs__text"><a href="#">TOP</a>  > <a href="#">盆栽と人</a> > 花澤明春園／花澤登人さん</p>
-    </div>
+    <p><a href="#">TOP</a>  > <a href="#">盆栽と人</a> > 花澤明春園／花澤登人さん
     <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_youtube.svg" src="#"></a>
@@ -608,100 +600,87 @@
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_facebook.svg" src="#"></a>
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_twitter.svg" src="#"></a>
       </div>
-      <div class="footer-link-area">
-        <div class="footer-link-area__box-wrapper">
+      <div class="footer__link-box">
+        <div class="footer__link-wrapper">
           <ul>
-            <li class="footer-link-area__main-menu"><a href="#">トップページ</a></li>
-            <li class="footer-link-area__main-menu"><a href="#">商品一覧</a></li>
-            <li class="footer-link-area__main-menu"><a href="#">盆栽と人</a></li>
-            <li class="footer-link-area__main-menu"><a href="#">BONについて</a></li>
-            <li class="footer-link-area__main-menu"><a href="#">会員登録</a></li>
-            <li class="footer-link-area__main-menu"><a href="#">ログイン</a></li>
-          <ul>
-        </div>
-        <div class="footer-link-area__box-wrapper">
-          <p class="footer-link-area__main-menu"><a href="#">香川県の盆栽園</a></p>
-          <ul>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
           <ul>
         </div>
-        <div class="footer-link-area__box-wrapper">
-          <p class="footer-link-area__main-menu"><a href="#">盆栽の基礎知識</a></p>
+        <div class="footer__link-wrapper">
+          <p><a href="#">あああああ</a></p>
           <ul>
-            <li class="footer-link-area__local-menu"><a href="#">日本各地の盆栽園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">初めての盆栽</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">盆栽の選び方</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">盆栽の道具</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">室内で楽しむ盆栽</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">季節を楽しむ盆栽</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">海外で人気のBONSAI</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">盆栽の歴史</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
           <ul>
         </div>
-        <div class="footer-link-area__box-wrapper">
-          <p class="footer-link-area__main-menu"><a href="#">盆栽の育て方</a></p>
+        <div class="footer__link-wrapper">
+          <p><a href="#">あああああ</a></p>
           <ul>
-            <li class="footer-link-area__local-menu"><a href="#">剪定の方法、時期</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">用土の作り方</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">水やり</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">置き場所</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">肥料のやり方、時期</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">植え替えの方法</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">挿し木の方法</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">接ぎ木の方法</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">枯れる原因と対処法</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">月ごとの手入れ</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">樹種別の手入れ、育て方</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
           <ul>
         </div>
-        <div class="footer-link-area__box-wrapper">
-          <p class="footer-link-area__main-menu"><a href="#">盆栽用語辞典</a></p>
+        <div class="footer__link-wrapper">
+          <p><a href="#">あああああ</a></p>
           <ul>
-            <li class="footer-link-area__local-menu"><a href="#">あ行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">か行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">さ行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">た行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">な行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">は行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">ま行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">や行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">ら行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">わ行</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
           <ul>
         </div>
-        <div class="footer-link-area__box-wrapper">
-          <p class="footer-link-area__main-menu"><a href="#">ショッピングガイド</a></p>
+        <div class="footer__link-wrapper">
+          <p><a href="#">あああああ</a></p>
           <ul>
-            <li class="footer-link-area__local-menu"><a href="#">商品のご注文について</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">お支払い方法について</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">配送・送料について</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">盆栽の梱包・箱詰めについて</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">注文の取消・返品について</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">会員登録、退会について</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">商品説明について</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
           <ul>
         </div>
-        <div class="footer-link-area__box-wrapper">
+        <div class="footer__link-wrapper">
+          <p><a href="#">あああああ</a></p>
           <ul>
-            <li class="footer-link-area__main-menu"><a href="#">特定商取引に関する<br class="footer-link-area__br--pc">法律に基づく表記</a></li>
-            <li class="footer-link-area__main-menu"><a href="#">お問い合わせ</a></li>
-            <li class="footer-link-area__main-menu"><a href="#">プライバシーポリシー</a></li>
-            <li class="footer-link-area__main-menu"><a href="#">サイトマップ</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+          <ul>
+        </div>
+        <div class="footer__link-wrapper">
+          <ul>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
           <ul>
         </div>
       </div>
       <p class="footer__pagetop"><a href="#">page top</a></p>
-      <div class="footer__site-logo">
-        <img src="../dist/images/common/site-logo.png">
-      </div>
       <p class="footer__copyright">© 2019 bon - bonsai to hito - all rights reserved.</p>
     </footer>
   </div>
-<script src="../dist/js/main.min.js"></script>
+<script src="./dist/js/main.min.js"></script>
 </body>
 </html>
