--- a/components.html
+++ b/components.html
@@ -43,6 +43,7 @@
         <br>通学路の横に松の苗が植わりごく普通に盆栽が部屋を飾る。</p>
       </div>
       <!-- index-title / end -->
+      <!--
       <div class="row">
         <div class="col-1">col-1</div>
         <div class="col-1">col-1</div>
@@ -57,26 +58,13 @@
         <div class="col-1">col-1</div>
         <div class="col-1">col-1</div>
       </div>
+      -->
       <!-- detail-title / start -->
       <div class="detail-title offset-3 col-9">
         <h2 class="detail-title__category-title">香川県の盆栽園</h2>
         <h1 class="detail-title__heading">北谷養盛園</h1>
       </div>
       <!-- detail-title / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- people-title / start -->
       <div class="people-title offset-3 col-9">
         <h2 class="people-title__category-title">香川県の盆栽園</h2>
@@ -94,24 +82,10 @@
         </figure>
       </div>
       <!-- people-title / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- pickup-title / start -->
-      <!-- <div class="pickup-title offset-3 col-9">
+      <div class="pickup-title offset-3 col-9">
         <h2 class="pickup-title__category-title">香川県の盆栽園</h2>
-      </div> -->
+      </div>
       <div class="pickup-title__box offset-3 col-10">
         <div class="pickup-title__title-wrapper">
           <div class="pickup-title__title-inner">
@@ -126,20 +100,6 @@
         </figure>
       </div>
       <!-- pickup-title / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- article-heading / start -->
       <h2 class="article-heading offset-4 col-6">瀬戸内で盆栽をつくるということ</h2>
       <!-- article-heading / end -->
@@ -149,20 +109,6 @@
       <!-- article-large-image / start -->
       <img class="article-large-image offset-3 col-8" src="https://placehold.jp/1340x955.png">
       <!-- article-large-image / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- article-left-image / start -->
       <div class="article-left-image offset-3 col-7">
         <div class="article-left-image__image-box">
@@ -179,20 +125,6 @@
         </div>
       </div>
       <!-- article-left-image / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- article-heading / start -->
       <h2 class="article-heading offset-4 col-6">瀬戸内で盆栽をつくるということ</h2>
       <!-- article-heading / end -->
@@ -221,20 +153,6 @@
       <!-- article-accent-image / start -->
       <img class="article-accent-image" src="https://placehold.jp/2000x955.png">
       <!-- article-accent-image / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- article-message / start -->
       <div class="article-message offset-4 col-6">
         <p class="article-message__title">生産者からのメッセージ　花澤明春園・花澤さん</p>
@@ -244,20 +162,6 @@
         </div>
       </div>
       <!-- article-message / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- article-quote / start -->
       <blockquote class="article-quote offset-4 col-6">
         <div class="article-quote__wrapper">
@@ -269,20 +173,6 @@
         <p class="article-quote__quote-source">美術出版社「丹下健三 伝統と創造 瀬戸内から世界へ」より</p>
       </blockquote>
       <!-- article-quote / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- row-table / start -->
       <table class="row-table offset-4 col-6">
         <tr class="row-table__tr">
@@ -307,30 +197,6 @@
         </tr>
       </table>
       <!-- row-table / end -->
-      <!-- text-link-box / start -->
-      <ul class="text-link-box offset-3 col-8">
-        <li class="text-link-box__wrapper">
-          <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
-          <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
-        </li>
-        <li class="text-link-box__wrapper">
-          <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
-          <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
-        </li>
-        <li class="text-link-box__wrapper">
-          <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
-          <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
-        </li>
-        <li class="text-link-box__wrapper">
-          <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
-          <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
-        </li>
-        <li class="text-link-box__wrapper">
-          <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
-          <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
-        </li>
-      </ul>
-      <!-- text-link-box / end -->
       <!-- anker-link-box / start -->
       <ul class="anker-link-box offset-4 col-6">
         <li class="anker-link-box__list"><p class="anker-link-box__link-text"><a href="#">あ行</a></p></li>
@@ -378,24 +244,35 @@
           </ul>
         </div>
       </div>
+      <!-- text-list-link-box / end -->
+      <!-- text-link-box / start -->
+      <ul class="text-link-box offset-3 col-8">
+        <li class="text-link-box__wrapper">
+          <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
+          <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
+        </li>
+        <li class="text-link-box__wrapper">
+          <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
+          <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
+        </li>
+        <li class="text-link-box__wrapper">
+          <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
+          <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
+        </li>
+        <li class="text-link-box__wrapper">
+          <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
+          <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
+        </li>
+        <li class="text-link-box__wrapper">
+          <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
+          <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
+        </li>
+      </ul>
+      <!-- text-link-box / end -->
     </article>
     <aside class="flex aside">
       <div class="aside__area-wrapper">
       <!-- text-list-link-box / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- people-link-box / start -->
       <ul class="people-link-box offset-3 col-8">
         <h2 class="people-link-box__area-title">関連記事</h2>
@@ -445,20 +322,6 @@
         </div>
       </ul>
       <!-- people-link-box / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- garden-link-box / start -->
       <ul class="garden-link-box offset-3 col-8">
         <h2 class="garden-link-box__area-title">関連記事</h2>
@@ -506,20 +369,6 @@
         </div>
       </ul>
       <!-- garden-link-box / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- product-link-box / start -->
       <ul class="product-link-box offset-3 col-8">
         <h2 class="product-link-box__area-title">関連記事</h2>
@@ -555,20 +404,6 @@
         </div>
       </ul>
       <!-- product-link-box / end -->
-      <div class="row">
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-        <div class="col-1">col-1</div>
-      </div>
       <!-- contents-link-box / start -->
       <div class="contents-link-box offset-3 col-8">
         <div class="contents-link-box__wrapper">
