--- a/components.html
+++ b/components.html
@@ -270,13 +270,8 @@
         </li>
       </ul>
       <!-- text-link-box / end -->
-    </article>
-    <aside class="flex aside">
-      <div class="aside__area-wrapper">
-      <!-- text-list-link-box / end -->
       <!-- people-link-box / start -->
       <ul class="people-link-box offset-3 col-8">
-        <h2 class="people-link-box__area-title">関連記事</h2>
         <div class="people-link-box__wrapper">
           <li class="people-link-box__list-wrapper">
             <a class="people-link-box__link-wrapper" href="#">
@@ -325,7 +320,6 @@
       <!-- people-link-box / end -->
       <!-- garden-link-box / start -->
       <ul class="garden-link-box offset-3 col-8">
-        <h2 class="garden-link-box__area-title">関連記事</h2>
         <div class="garden-link-box__wrapper">
           <li class="garden-link-box__list-wrapper">
             <a class="garden-link-box__link-wrapper" href="#">
@@ -372,7 +366,6 @@
       <!-- garden-link-box / end -->
       <!-- product-link-box / start -->
       <ul class="product-link-box offset-3 col-8">
-        <h2 class="product-link-box__area-title">関連記事</h2>
         <div class="product-link-box__wrapper">
           <li class="product-link-box__list-wrapper">
             <a class="product-link-box__link-wrapper" href="#">
@@ -405,6 +398,141 @@
         </div>
       </ul>
       <!-- product-link-box / end -->
+    </article>
+    <aside class="flex aside">
+      <div class="aside__area-wrapper">
+      <!-- text-list-link-box / end -->
+      <!-- people-link-box--aside / start -->
+      <ul class="people-link-box--aside offset-3 col-8">
+        <h2 class="people-link-box__area-title">関連記事</h2>
+        <div class="people-link-box--aside__wrapper">
+          <li class="people-link-box--aside__list-wrapper">
+            <a class="people-link-box--aside__link-wrapper" href="#">
+              <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+          <li class="people-link-box--aside__list-wrapper">
+            <a class="people-link-box--aside__link-wrapper" href="#">
+              <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+          <li class="people-link-box--aside__list-wrapper">
+            <a class="people-link-box--aside__link-wrapper" href="#">
+              <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+          <li class="people-link-box--aside__list-wrapper">
+            <a class="people-link-box--aside__link-wrapper" href="#">
+              <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+          <li class="people-link-box--aside__list-wrapper">
+            <a class="people-link-box--aside__link-wrapper" href="#">
+              <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+          <li class="people-link-box--aside__list-wrapper">
+            <a class="people-link-box--aside__link-wrapper" href="#">
+              <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+        </div>
+      </ul>
+      <!-- people-link-box--aside / end -->
+      <!-- garden-link-box--aside / start -->
+      <ul class="garden-link-box--aside offset-3 col-8">
+        <h2 class="garden-link-box--aside__area-title">関連記事</h2>
+        <div class="garden-link-box--aside__wrapper">
+          <li class="garden-link-box--aside__list-wrapper">
+            <a class="garden-link-box--aside__link-wrapper" href="#">
+              <img class="garden-link-box--aside__garden-images" src="https://placehold.jp/430x269.png">
+              <h2 class="garden-link-box--aside__garden-name">花澤明春園</h2>
+            </a>
+            <div class="garden-link-box--aside__garden-address">香川県高松市鬼無町鬼無748-3</div>
+            <div class="garden-link-box--aside__garden-phone-number">087-881-2847</div>
+          </li>
+          <li class="garden-link-box--aside__list-wrapper">
+            <a class="garden-link-box--aside__link-wrapper" href="#">
+              <img class="garden-link-box--aside__garden-images" src="https://placehold.jp/430x269.png">
+              <h2 class="garden-link-box--aside__garden-name">花澤明春園</h2>
+            </a>
+            <div class="garden-link-box--aside__garden-address">香川県高松市鬼無町鬼無748-3</div>
+            <div class="garden-link-box--aside__garden-phone-number">087-881-2847</div>
+          </li>
+          <li class="garden-link-box--aside__list-wrapper">
+            <a class="garden-link-box--aside__link-wrapper" href="#">
+              <img class="garden-link-box--aside__garden-images" src="https://placehold.jp/430x269.png">
+              <h2 class="garden-link-box--aside__garden-name">花澤明春園</h2>
+            </a>
+            <div class="garden-link-box--aside__garden-address">香川県高松市鬼無町鬼無748-3</div>
+            <div class="garden-link-box--aside__garden-phone-number">087-881-2847</div>
+          </li>
+          <li class="garden-link-box--aside__list-wrapper">
+            <a class="garden-link-box--aside__link-wrapper" href="#">
+              <img class="garden-link-box--aside__garden-images" src="https://placehold.jp/430x269.png">
+              <h2 class="garden-link-box--aside__garden-name">花澤明春園</h2>
+            </a>
+            <div class="garden-link-box--aside__garden-address">香川県高松市鬼無町鬼無748-3</div>
+            <div class="garden-link-box--aside__garden-phone-number">087-881-2847</div>
+          </li>
+          <li class="garden-link-box--aside__list-wrapper">
+            <a class="garden-link-box--aside__link-wrapper" href="#">
+              <img class="garden-link-box--aside__garden-images" src="https://placehold.jp/430x269.png">
+              <h2 class="garden-link-box--aside__garden-name">花澤明春園</h2>
+            </a>
+            <div class="garden-link-box--aside__garden-address">香川県高松市鬼無町鬼無748-3</div>
+            <div class="garden-link-box--aside__garden-phone-number">087-881-2847</div>
+          </li>
+        </div>
+      </ul>
+      <!-- garden-link-box--aside / end -->
+      <!-- product-link-box--aside / start -->
+      <ul class="product-link-box--aside offset-3 col-8">
+        <h2 class="product-link-box--aside__area-title">関連記事</h2>
+        <div class="product-link-box--aside__wrapper">
+          <li class="product-link-box--aside__list-wrapper">
+            <a class="product-link-box--aside__link-wrapper" href="#">
+              <img class="product-link-box--aside__product-images" src="https://placehold.jp/430x430.png">
+              <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            </a>
+              <p class="product-link-box--aside__product-price">売却済み</p>
+          </li>
+          <li class="product-link-box--aside__list-wrapper">
+            <a class="product-link-box--aside__link-wrapper" href="#">
+              <img class="product-link-box--aside__product-images" src="https://placehold.jp/430x430.png">
+              <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            </a>
+              <p class="product-link-box--aside__product-price">売却済み</p>
+          </li>
+          <li class="product-link-box--aside__list-wrapper">
+            <a class="product-link-box--aside__link-wrapper" href="#">
+              <img class="product-link-box--aside__product-images" src="https://placehold.jp/430x430.png">
+              <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            </a>
+              <p class="product-link-box--aside__product-price">売却済み</p>
+          </li>
+          <li class="product-link-box--aside__list-wrapper">
+            <a class="product-link-box--aside__link-wrapper" href="#">
+              <img class="product-link-box--aside__product-images" src="https://placehold.jp/430x430.png">
+              <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            </a>
+              <p class="product-link-box--aside__product-price">売却済み</p>
+          </li>
+        </div>
+      </ul>
+      <!-- product-link-box--aside / end -->
       <!-- contents-link-box / start -->
       <div class="contents-link-box offset-3 col-8">
         <div class="contents-link-box__wrapper">
